getting things going for container kafka

--- a/conf/kafka.properties
+++ b/conf/kafka.properties
@@ -4,7 +4,8 @@
 # local kafka
 #bootstrap.servers=localhost:9092
 # local redpanda https://vectorized.io/redpanda
-bootstrap.servers=localhost:62243
+bootstrap.servers=redpanda:29092
+bootstrap.servers.local=localhost:9092
 
 # for confluent cloud and other cloud services
 #bootstrap.servers= <put URI here>:9092
